# mosaic

.github/workflows/: doc-publish.yml  gpu-pcie-exporter-container.yml  integration-tests.yml  nccl-profiler-plugin-container.yml  pipeline-analyzer-container.yml  release.yml
deployments/: docker-compose-vllm.yml  docker-compose.yml
deployments/amd-gpu-monitoring/: README.md  docker-compose.yml
deployments/dashboards/: dashboards.yml  disaggregated.json
deployments/file_sd_configs/: file-sd-config-generate.sh
deployments/gpu_pcie_exporter/: Dockerfile  README.md
deployments/nvidia-gpu-monitoring/: README.md  docker-compose.yml
deployments/pipeline-analyzer/: Dockerfile
docs/: mkdocs.yml  requirements.txt
docs/docs/: dictionary.txt  testsuite.md
docs/docs/stylesheets/: extra.css
profiler/: Dockerfile
tests/: Makefile  docker-compose.yml
tests/suites/: conftest.py  pyproject.toml
tests/suites/dashboards/: __init__.py  conftest.py  test_dashboards.py
tests/suites/profiler_otel/: conftest.py  test_profiler_metrics.py
